# lora-serialization

./: .eslintignore  .eslintrc.js  .gitignore  .npmignore  .travis.yml  Brewfile  CMakeLists.txt  LICENSE  README.md  idf_component.yml  library.properties  package.json  tea.yaml
.ci/: run_c_tests.sh
example/: main.ino  ttn_decoder.js  ttn_encoder_LoraMessage.js
examples/: .eslintrc  main_encoder_LoraMessage.ino  ttn_encoder.js
examples/main_encoder/: main_encoder.ino
src/: LoraEncoder.cpp  LoraEncoder.h  LoraMessage.cpp  LoraMessage.h  LoraMessage.js  decoder.js  encoder.cpp  encoder.h  encoder.js  index.js
test/: .eslintrc.js  LoraMessage.js  Makefile  base.js  helpers.cpp  main.cpp  main.h  spec.LoraMessage.js  spec.decoder.js  spec.encoder.js  spec.js  test.cpp
test/decoder/: bitmap.js  decode.js  humidity.js  latLng.js  rawfloat.js  temperature.js  uint16.js  uint8.js  unixtime.js
test/encoder/: bitmap.js  encode.js  humidity.js  latLng.js  temperature.js  uint16.js  uint8.js  unixtime.js
test/lib/Catch/: LICENSE
test/lib/Catch/src/: decoder.js
test/roundtrip/: latLng.js  temperature.js
